--- a/css/styles.css
+++ b/css/styles.css
@@ -113,7 +113,7 @@ body {
 .first_section {
   background-color: var(--dark-gray);
   background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(images/fondo-index.jpg);
+    url(..images/fondo-index.jpg);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   height: 100vh;
   background-repeat: no-repeat;
